note edit/display bug fixes (limited title length, no horizontal scrolling, always defaults to display mode, unsaved edits are not applied)

--- a/assets/calendar.css
+++ b/assets/calendar.css
@@ -171,7 +171,8 @@
 .note-text-area {
   font-size: 18px;
   height: 240px;
-  overflow: auto;
+  overflow-wrap: break-word;
+  overflow-y: scroll;
   margin-bottom: 5px;
 }
 
